--- a/demo.tex
+++ b/demo.tex
@@ -1,21 +1,75 @@
-% Section 10 in file demo.tex
-\tbw
-
-% Section 10.1
 \subsection{Voice Controlled Light Activation}
+The first demo that we would like to perform with the functioning prototype of
+WHCS will be voice controlled light activation. Voice control is one of the big
+features of WHCS because it adds a lot of interest to any project. Light
+activation through the system will be one of the most common use cases. Voice
+controlled light activation combines an exciting feature with one of the most
+common use cases so it will be a frequent demo. To perform this demo the
+Android application will have to be paired with the base station already and
+ready to communicate to the system. We can allow any person that wishes to
+participate to utilize the application and access the voice command feature.
+The person performing the voice activation will be able to say something
+similar to on or off and toggle the state of a light in the system. This demo
+can be extended to include outlets as well. We will have a coffee pot hooked up
+to an outlet being controlled by WHCS. After activating the light the performer
+will be able to turn off the light and then start interacting with the outlet.
+The outlet can be turned on, thus turning on the coffee pot. This is a
+preferable way to start the day so it should be a relatable demo for an
+audience. From this point we can show that this feature is also accessible
+through the GUI of the Android application. The voice chat feature is only a
+replication of the GUI capabilities and this is an important point to make.
 
-% Section 10.2
+An extension that would help this demo would be letting participants create
+their own commands for interacting with WHCS. This is a feature that we will be
+incorporating into the Android application. This demonstrates how WHCS is
+designed to be customizable for each household. A participant of the team will
+be able to add a setting that merely saying mouse turns off all the lights and
+outlets connected to the system. Then the performer would say mouse into the
+voice control system and the result should be the lights and outlets of the
+display being turned off. The point of this demo is to show the ease of use and
+the power of the voice control in the Android application.
+
 \subsection{LCD Light Activation}
 \todo{1 page}
 
-% Section 10.3
 \subsection{Sensor Query}
+Sensors are a passive part of WHCS that enhance the overall appeal of the
+system but do not demo as well as turning things on or off. Our prototype of
+WHCS will have a functioning temperature sensor control module that is updating
+based on the temperature of the environment. In our demos we want to make sure
+to show the operation of this sensor.  WHCS allows sensors like temperature
+sensors to be mobile around the home. The sensor can be plugged in anywhere and
+receive power and update for the temperature of that environment. When we are
+demoing WHCS we want to show this mobility by showing the sensor being moved
+around and updating accordingly. The demo will show how the sensors information
+is viewable from the LCD as well as the Android application. If the sensors
+data is not recent enough we can prompt the sensor to update its most recent
+reading and this should be performed during the demo. This demo could be made
+more powerful for viewers if the system reacted to changes in the sensors
+reading. At this point in time we have not considered methods for WHCS to react
+to sensor data. For our purposes the sensors will only serve as information
+providers for users.
 
-% Section 10.4
 \subsection{Fault Recovery (Loss of Power)}
 \todo{1 page}
 
-% Section 10.5
 \subsection{Remote Door Access}
 \label{sec:demo-door}
-\todo{1 page}
+The electric strike of WHCS will provide us with a door access demo. This will
+be a great demo because it is very appealing to be able to unlock your door
+wirelessly and it will show off the scalability of our system. The electric
+strike will be physically mounted to the proto{}-panel that we will be using
+with our demo. While the command to unlock the strike has not been given it
+will be impossible to open the imitation door that is attached to the electric
+strike.  The point of this demo will be to show that from the Android
+application it will be possible to activate the electric strike and therefore
+allow the door to be opened. The electric strike will also be available to be
+unlocked from the LCD. During this demo we will explain that the electric
+strike that we use for WHCS does not consume power while it is in the locked
+state. It is only drawing current when it is toggled to the open state and this
+happens for a maximum of thirty seconds. This will also be a great time to
+mention how the utilization of an electric strike does not impede normal home
+access. As long as the doorknob on the door has a key lock on it it can remain
+in the locked position at all times. if the electric strike ever fails and is
+unaccessible from the application then the door knob can simply be unlocked and
+bypass the electric strike.
