Integrate Proto from Joseph

--- a/manage.tex
+++ b/manage.tex
@@ -1,12 +1,21 @@
-% Section 11 in file manage.tex
-\tbw
+The large effort required to create a functional, working product, wouldn't
+have been possible without careful planning. The project management of WHCS is
+paramount to our success as a team. We need to be able to estimate our costs,
+discover parts for our design, and make sure we keep on track of our timeline.
+Planning these aspects of our project before hand creates a well defined
+roadmap that all group members can follow. Without such planning, everyone
+would have their own perception of time and responsibility and the project
+would flounder.
 
-% Section 11.1
 \subsection{Budget}
+To help discover the costs of WHCS before diving straight in to the project, we
+planned a comprehensive budget. This budget contained names, quantities, and
+estimated costs of all the major parts of our project. This itemized breakdown
+of WHCS allowed us to budget our funds amongst the group members and also to
+apply for external funding. Through the use of our detailed budget, we were
+able to land a funding offer of 
 
-% Section 11.2
 \subsection{Parts Acquisition}
 
-% Section 11.3
 \subsection{Milestones}
 
