--- a/proto.tex
+++ b/proto.tex
@@ -49,6 +49,7 @@ more than just toggling an LED is when WHCS will be impressive.
 \subsection{Rogers Board Etching Prototyping}
 
 \subsection{WHCS Proto-Panel}
+\label{sec:proto-panel-proto}
 Presentation plays a huge part on how the public feels about a product. This is
 why it is so important that the display of the project is well put together.
 Not only is it important to have a nice display for the purpose of it being a
