--- a/whcs.tex
+++ b/whcs.tex
@@ -51,6 +51,9 @@
 \usepackage{float}
 % Fancy if statements
 \usepackage{ifthen}
+\usepackage{array}
+%\usepackage{booktabs,adjustbox}
+%\usepackage{supertabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Hyperref should be last
